test/errors/executor/runtime_type_null.ms
print null + 1
// Runtime Error - Type (Line 0, Column 0): addition expects two strings or two numbers, instead got values of type TYPE_NULL and TYPE_NUMBER
